--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         id: "upload"
         uses: "anantaramdas/ipfs-pinata-deploy-action@a551f37c17ec3961df7c3ad52e1cd266dfd3d7e7"
         with:
-          path: "./build/sablier-community-solana.tokenlist.json"
+          path: "./build/sablier-solana.tokenlist.json"
           pin-name: "Sablier Default Token List (Solana)"
           pinata-api-key: ${{ secrets.PINATA_API_KEY }}
           pinata-secret-api-key: ${{ secrets.PINATA_API_SECRET_KEY }}
